Correct "letter-spacing" for H1

--- a/app/scss/base/_typography.scss
+++ b/app/scss/base/_typography.scss
@@ -45,6 +45,7 @@ h6 {
 h1 {
     font-size: 20px;
     line-height: 25px;
+    letter-spacing: -0.5px;
 
     @include bp-md {
 
